<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/select_main_bottom_menu_home"/>

    <item
        android:id="@+id/calenderFragment"
        android:title="@string/calender"
        android:enabled="true"
        android:icon="@drawable/select_main_bottom_menu_calender"/>

    <item
        android:id="@+id/chatFragment"
        android:title="@string/chat"
        android:enabled="true"
        android:icon="@drawable/select_main_bottom_menu_chat"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/my_profile"
        android:enabled="true"
        android:icon="@drawable/select_main_bottom_menu_profile"/>
</menu>