<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:fitsSystemWindows="true"
        android:paddingTop="?android:attr/actionBarSize"
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray06"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img_user_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_default_profile" />

        <TextView
            android:id="@+id/profile_txt_user_name"
            style="@style/Title1.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/profile_img_user_profile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="이아리" />

        <TextView
            android:id="@+id/profile_txt_user_job"
            style="@style/SubTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/profile_txt_user_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_user_name"
            tools:text="직장인" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_btn_modify"
            android:layout_width="39dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_btn_purple04"
            android:text="@string/modify"
            android:textColor="@color/purple01"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_layout_gray06"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView2"
            style="@style/Title2.purple02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/my_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/profile_ll_my_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_wallet" />

            <TextView
                android:id="@+id/profile_txt_bank"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                tools:text="KB국민카드" />

            <TextView
                android:id="@+id/profile_txt_account_number"
                style="@style/Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                tools:text="*************" />

            <TextView
                android:id="@+id/profile_txt_my_account_modify_or_remove"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/modify_or_remove"
                android:textColor="@color/gray03" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_layout_gray06"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:id="@+id/textView3"
            style="@style/Title2.purple02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/setting" />

        <TextView
            android:id="@+id/profile_txt_setting_item1"
            style="@style/Body1"
            android:layout_marginStart="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="법적고지" />

        <TextView
            android:id="@+id/profile_txt_setting_item2"
            style="@style/Body1"
            android:layout_marginStart="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="버전 정보" />

        <TextView
            android:id="@+id/profile_txt_setting_item3"
            style="@style/Body1"
            android:layout_marginStart="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="개인정보 사용방침" />

        <TextView
            android:id="@+id/profile_txt_setting_item4"
            style="@style/Body1"
            android:layout_marginStart="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="비밀번호 변경" />

        <TextView
            android:layout_marginBottom="4dp"
            android:id="@+id/profile_txt_setting_item5"
            style="@style/Body1"
            android:layout_marginStart="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="로그아웃" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>